tests/ui/feature-gates/feature-gate-more-maybe-bounds.stderr
error: relaxed bounds are not permitted in supertrait bounds
  --> $DIR/feature-gate-more-maybe-bounds.rs:5:15
   |
LL | trait Trait3: ?Trait1 {}
   |               ^^^^^^^

error: this relaxed bound is not permitted here
  --> $DIR/feature-gate-more-maybe-bounds.rs:6:26
   |
LL | trait Trait4 where Self: ?Trait1 {}
   |                          ^^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined by the closest item

error: relaxed bounds are not permitted in trait object types
  --> $DIR/feature-gate-more-maybe-bounds.rs:8:28
   |
LL | fn foo(_: Box<dyn Trait1 + ?Trait2>) {}
   |                            ^^^^^^^

error[E0203]: type parameter has more than one relaxed default bound, only one is supported
  --> $DIR/feature-gate-more-maybe-bounds.rs:10:11
   |
LL | fn bar<T: ?Trait1 + ?Trait2>(_: T) {}
   |           ^^^^^^^   ^^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/feature-gate-more-maybe-bounds.rs:10:11
   |
LL | fn bar<T: ?Trait1 + ?Trait2>(_: T) {}
   |           ^^^^^^^

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/feature-gate-more-maybe-bounds.rs:10:21
   |
LL | fn bar<T: ?Trait1 + ?Trait2>(_: T) {}
   |                     ^^^^^^^

error[E0203]: type parameter has more than one relaxed default bound, only one is supported
  --> $DIR/feature-gate-more-maybe-bounds.rs:17:11
   |
LL | fn baz<T: ?Trait + ?Trait>(_ : T) {}
   |           ^^^^^^   ^^^^^^

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/feature-gate-more-maybe-bounds.rs:17:11
   |
LL | fn baz<T: ?Trait + ?Trait>(_ : T) {}
   |           ^^^^^^

error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/feature-gate-more-maybe-bounds.rs:17:20
   |
LL | fn baz<T: ?Trait + ?Trait>(_ : T) {}
   |                    ^^^^^^

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0203`.
